# TgBotStater

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
include/tg_stater/: bot.hpp  dependencies.hpp  logging.hpp  meta.hpp  state.hpp  tg_types.hpp
include/tg_stater/detail/: logging.hpp
include/tg_stater/handler/: callback.hpp  event.hpp  handler.hpp  type.hpp
include/tg_stater/state_storage/: common.hpp  memory.hpp
test_package/: test.cpp
